Added functionality to techStackInfo PopUp

--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
                     alt="HTML Logo"
                   />
                 </button>
-                <span id="HTMLInfo" class="hide">
+                <span id="HTMLInfo" class="hide info">
                   <div class="blurryBg"></div>
                   <div class="definitions">
                     <b>HTML</b>: HTML is the language in which most websites are
@@ -303,7 +303,7 @@
                     alt="CSS Logo"
                   />
                 </button>
-                <span id="CSSInfo" class="hide">
+                <span id="CSSInfo" class="hide info">
                   <div class="definitions">
                     <b>CSS</b>: Cascading Style Sheets (CSS) is a simple
                     mechanism for adding style (e.g., fonts, colors, spacing) to
@@ -334,7 +334,7 @@
                     alt="JavaScript Logo"
                   />
                 </button>
-                <span id="JSInfo" class="hide">
+                <span id="JSInfo" class="hide info">
                   <div class="definitions">
                     <b>JavaScript</b>: JavaScript is a scripting or programming
                     language that allows you to implement complex features on
@@ -367,7 +367,7 @@
                     alt="Python Logo"
                   />
                 </button>
-                <span id="PythonInfo" class="hide">
+                <span id="PythonInfo" class="hide info">
                   <div class="definitions">
                     <b>Python</b>: Python is an interpreted, interactive,
                     object-oriented programming language. It incorporates
@@ -400,7 +400,7 @@
                     alt="C++ Logo"
                   />
                 </button>
-                <span id="CPPInfo" class="hide">
+                <span id="CPPInfo" class="hide info">
                   <div class="definitions">
                     <b>C++</b>: C++ is a cross-platform language that can be
                     used to create high-performance applications.
@@ -429,7 +429,7 @@
                     alt="Dart Logo"
                   />
                 </button>
-                <span id="DartInfo" class="hide">
+                <span id="DartInfo" class="hide info">
                   <div class="definitions">
                     <b>Dart</b>: Dart is a client-optimized language for
                     developing fast apps on any platform. It&apos;s goal is to
@@ -459,7 +459,7 @@
                     alt="SQL Logo"
                   />
                 </button>
-                <span id="SQLInfo" class="hide">
+                <span id="SQLInfo" class="hide info">
                   <div class="definitions">
                     <b>SQL</b>: Structured query language (SQL) is a programming
                     language for storing and processing information in a
@@ -504,7 +504,7 @@
                     alt="Visual Studio Code Logo"
                   />
                 </button>
-                <span id="VSCODEInfo" class="hide">
+                <span id="VSCODEInfo" class="hide info">
                   <div class="definitions">
                     <b>Visual Studio Code</b>: Visual Studio Code is a
                     streamlined code editor with support for development
@@ -542,7 +542,7 @@
                     alt="Android Studio Logo"
                   />
                 </button>
-                <span id="AndroidStudioInfo" class="hide">
+                <span id="AndroidStudioInfo" class="hide info">
                   <div class="definitions">
                     <b>Android Studio</b>: Android Studio is the official
                     Integrated Development Environment (IDE) for Android app
@@ -575,7 +575,7 @@
                     alt="Visual Studio Logo"
                   />
                 </button>
-                <span id="VSInfo" class="hide">
+                <span id="VSInfo" class="hide info">
                   <div class="definitions">
                     <b>Visual Studio</b>: The Visual Studio IDE is a creative
                     launching pad that you can use to edit, debug, and build
@@ -615,7 +615,7 @@
                     alt="VirtualBox Logo"
                   />
                 </button>
-                <span id="VirtualBoxInfo" class="hide">
+                <span id="VirtualBoxInfo" class="hide info">
                   <div class="definitions">
                     <b>VirtualBox</b>: VirtualBox is a general-purpose full
                     virtualizer for x86 hardware, targeted at server, desktop
@@ -648,7 +648,7 @@
                     alt="Raspberry Pi Logo"
                   />
                 </button>
-                <span id="RaspberryPiInfo" class="hide">
+                <span id="RaspberryPiInfo" class="hide info">
                   <div class="definitions">
                     <b>Raspberry Pi</b>: Raspberry Pi is a micro computer that
                     has all the features you expect from a regular computer:
@@ -679,7 +679,7 @@
                     alt="MATLAB Logo"
                   />
                 </button>
-                <span id="MATLABInfo" class="hide">
+                <span id="MATLABInfo" class="hide info">
                   <div class="definitions">
                     <b>MATLAB</b>: MATLAB is a programming and numeric computing
                     platform used by millions of engineers and scientists to
@@ -710,7 +710,7 @@
                     alt="GitHub Logo"
                   />
                 </button>
-                <span id="GitHubInfo" class="hide">
+                <span id="GitHubInfo" class="hide info">
                   <div class="definitions">
                     <b>GitHub</b>: GitHub is a code hosting platform for version
                     control and collaboration. It lets you and others work
@@ -739,7 +739,7 @@
                     alt="Jupyter Logo"
                   />
                 </button>
-                <span id="JupyterInfo" class="hide">
+                <span id="JupyterInfo" class="hide info">
                   <div class="definitions">
                     <b>Jupyter Notebooks</b>: Jupyter Notebook is a simplified
                     notebook authoring application for interactive computing
@@ -773,7 +773,7 @@
                     alt="Flutter Logo"
                   />
                 </button>
-                <span id="FlutterInfo" class="hide">
+                <span id="FlutterInfo" class="hide info">
                   <div class="definitions">
                     <b>Flutter</b>: Flutter is an open source framework by
                     Google for building beautiful, natively compiled,
@@ -801,7 +801,7 @@
                     alt="Django Logo"
                   />
                 </button>
-                <span id="DjangoInfo" class="hide">
+                <span id="DjangoInfo" class="hide info">
                   <div class="definitions">
                     <b>Django</b>: Django is a high-level Python web framework
                     that encourages rapid development and clean, pragmatic
