Fix bug with tech stack buttons

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
       <div class="container">
         <div id="greeting">
           <center>
-            <h2 class="greeting">Hello,</h2>
+            <h2 class="greeting typing-heading">Hello,</h2>
             <h1 class="greeting">my name is Jadnell H. Reyes Pérez</h1>
             <h4 class="greeting">Computer Engineering Graduate</h4>
           </center>
