added sectionHeadings class and made it responsive

--- a/index.html
+++ b/index.html
@@ -113,12 +113,11 @@
 
     <!-- ABOUT ME PAGE -->
     <section id="aboutMePage">
-      <br /><br />
       <!--Text Greeting-->
       <div class="container">
         <div id="greeting">
           <center>
-            <h2 class="greeting typing-heading">Hello,</h2>
+            <h2 class="greeting">Hello,</h2>
             <h1 class="greeting">my name is Jadnell H. Reyes Pérez</h1>
             <h4 class="greeting">Computer Engineering Graduate</h4>
           </center>
@@ -165,16 +164,6 @@
                 </p>
               </div>
             </div>
-
-            <!--  <a
-                  ><img
-                    class="mainPictures"
-                    src="Images/Pictures/BEACH.jpg"
-                    title="This is Puerto Rico"
-                    width="250px"
-                    height="250px"
-                    alt="Picture of a Beach in Puerto Rico"
-                /></a>-->
           </div>
 
           <div class="col">
@@ -248,13 +237,9 @@
 
     <!-- TECH STACK PAGE -->
     <section id="techStackPage">
-      <br /><br />
-
-      <center>
-        <h2>Technologies Stack:</h2>
-      </center>
-
-      <br />
+      <div class="container">
+        <h2 class="sectionHeadings">Technologies Stack:</h2>
+      </div>
 
       <div class="container">
         <div id="progLangCard" class="techStackCard">
@@ -829,11 +814,9 @@
 
     <!-- PROJECTS PAGE -->
     <section id="projectsPage">
-      <br /><br />
-      <center>
-        <h2>Projects:</h2>
-      </center>
-
+      <div class="container">
+        <h2 class="sectionHeadings">Projects:</h2>
+      </div>
       <div class="container" id="projectContainer">
         <div class="projectCard">
           <div class="container text-center">
@@ -1147,14 +1130,11 @@
     </section>
 
     <section id="contactPage">
-      <br />
-      <h4 id="socialMedia">
-        <center>Contact:</center>
-      </h4>
+      <div class="container">
+        <h2 class="sectionHeadings">Contact:</h2>
+      </div>
 
       <div id="socialMediaBar">
-        <br />
-
         <div class="container text-center">
           <!-- Social Media Buttons Column -->
           <div class="row">
