Testing of contactForm name validation

--- a/index.html
+++ b/index.html
@@ -1280,7 +1280,6 @@
                     action="https://send.pageclip.co/CAH0P5X4x3AsDEPAqnhl4MqM62FY8Ndd/contactForm"
                     class="pageclip-form form"
                     method="post"
-                    onsubmit=""
                   >
                     <input
                       type="text"
@@ -1289,6 +1288,7 @@
                       placeholder="First Name:"
                       name="firstName"
                       required
+                      onsubmit="return validateName()"
                     />
 
                     <input
@@ -1342,7 +1342,6 @@
       </div>
       <!-- end contact section-->
     </section>
-    <br />
     <footer>Copyright © 2023 Jadnell Reyes. All Rights Reserved</footer>
 
     <!-- SCRIPTS -->
