--- a/index.html
+++ b/index.html
@@ -1353,6 +1353,7 @@
     <script src="scripts/navBar.js"></script>
     <script src="scripts/techStackButtons.js"></script>
     <script src="scripts/imageSlideshow.js"></script>
+    <script src="scripts/contactForm.js"></script>
     <script src="https://s.pageclip.co/v1/pageclip.js" charset="utf-8"></script>
   </body>
 </html>
