Added an animation and simplified css

--- a/index.html
+++ b/index.html
@@ -115,16 +115,10 @@
     <section id="aboutMePage">
       <!--Text Greeting-->
       <div class="container">
-        <div id="greeting">
-          <center>
-            <h2 class="greeting">Hello,</h2>
-            <h1 class="greeting">my name is Jadnell H. Reyes Pérez</h1>
-            <h4 class="greeting">Computer Engineering Graduate</h4>
-          </center>
-        </div>
+        <h2 class="greeting">Hello World!</h2>
+        <h1 class="greeting">My name is Jadnell H. Reyes Pérez</h1>
+        <h3 class="greeting">and this is my Portfolio.</h3>
       </div>
-
-      <br />
 
       <!-- Image and Info Cards Containers -->
       <div class="container text-center">
@@ -813,7 +807,7 @@
     </section>
 
     <!-- PROJECTS PAGE -->
-    <section id="projectsPage">
+    <section id="projectsPage" 0>
       <div class="container">
         <h2 class="sectionHeadings">Projects:</h2>
       </div>
@@ -1342,7 +1336,9 @@
       </div>
       <!-- end contact section-->
     </section>
-    <footer>Copyright © 2023 Jadnell Reyes. All Rights Reserved</footer>
+    <section id="footer">
+      <footer>Copyright © 2023 Jadnell Reyes. All Rights Reserved</footer>
+    </section>
 
     <!-- SCRIPTS -->
     <script
