Minor bug fixes

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                   title="Hello! This is me"
                   width="275px"
                   height="275px"
-                  alt="I was supposed to appear here..."
+                  alt="A picture of Jadnell Reyes was supposed to appear here..."
               /></a>
               <br />
             </div>
@@ -848,11 +848,7 @@
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa
                   earum illum pariatur dolorem dignissimos eligendi consectetur
                   deleniti officia laboriosam quasi cupiditate dolores iusto
-                  unde mollitia numquam eius aspernatur, quis et. Lorem ipsum
-                  dolor sit amet consectetur adipisicing elit. Ipsa earum illum
-                  pariatur dolorem dignissimos eligendi consectetur deleniti
-                  officia laboriosam quasi cupiditate dolores iusto unde
-                  mollitia numquam eius aspernatur, quis et.
+                  unde mollitia numquam eius aspernatur, quis et.
                 </p>
 
                 <h3 class="cardTitles">Images:</h3>
@@ -951,11 +947,7 @@
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa
                   earum illum pariatur dolorem dignissimos eligendi consectetur
                   deleniti officia laboriosam quasi cupiditate dolores iusto
-                  unde mollitia numquam eius aspernatur, quis et. Lorem ipsum
-                  dolor sit amet consectetur adipisicing elit. Ipsa earum illum
-                  pariatur dolorem dignissimos eligendi consectetur deleniti
-                  officia laboriosam quasi cupiditate dolores iusto unde
-                  mollitia numquam eius aspernatur, quis et.
+                  unde mollitia numquam eius aspernatur, quis et.
                 </p>
 
                 <h3 class="cardTitles">Images:</h3>
@@ -1053,11 +1045,7 @@
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa
                   earum illum pariatur dolorem dignissimos eligendi consectetur
                   deleniti officia laboriosam quasi cupiditate dolores iusto
-                  unde mollitia numquam eius aspernatur, quis et. Lorem ipsum
-                  dolor sit amet consectetur adipisicing elit. Ipsa earum illum
-                  pariatur dolorem dignissimos eligendi consectetur deleniti
-                  officia laboriosam quasi cupiditate dolores iusto unde
-                  mollitia numquam eius aspernatur, quis et.
+                  unde mollitia numquam eius aspernatur, quis et.
                 </p>
 
                 <h3 class="cardTitles">Images:</h3>
