--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <?xml version = "1.0"?>
 <!DOCTYPE html PUBLIC "-//w3c//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html xmlns="http://www.w3.org/1999/xhtml" lang="en">
   <head>
     <meta charset="utf-8" />
 
@@ -21,7 +21,7 @@
     />
 
     <!-- Stylesheet Link-->
-    <link href="Styles/dayDesign.css" type="text/css" rel="stylesheet" />
+    <link href="./Styles/dayDesign.css" type="text/css" rel="stylesheet" />
 
     <!-- Bootstrap Link-->
     <link
