Changed Main Color Theme

--- a/index.html
+++ b/index.html
@@ -1166,7 +1166,7 @@
                           onclick="window.location.href='https://github.com/jadnell555';"
                         >
                           <img
-                            src="Images/Tech Stack/githubSocialMedia.svg"
+                            src="Images/Tech Stack/github.svg"
                             title="GitHub"
                             width="35px"
                             height="35px"
