--- a/index.html
+++ b/index.html
@@ -675,7 +675,7 @@
                   <h6 class="techName">GitHub</h6>
                   <img
                     class="progLangIcon"
-                    src="Images/Tech Stack/githubTechStack.svg"
+                    src="Images/Tech Stack/github.svg"
                     title="GitHub"
                     width="75px"
                     height="75px"
@@ -1166,7 +1166,7 @@
                           onclick="window.location.href='https://github.com/jadnell555';"
                         >
                           <img
-                            src="Images/Tech Stack/github.svg"
+                            src="Images/Tech Stack/githubSocialMedia.svg"
                             title="GitHub"
                             width="35px"
                             height="35px"
