--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
     <!-- Theme Changer Button -->
 
     <!-- ABOUT ME PAGE -->
-    <section id="aboutMePage">
+    <section id="aboutMePage" class="animatedSection leftSlide">
       <!--Text Greeting-->
       <div class="container">
         <h2 class="greeting">Hello World!</h2>
@@ -227,7 +227,7 @@
     </section>
 
     <!-- TECH STACK PAGE -->
-    <section id="techStackPage">
+    <section id="techStackPage" class="animatedSection">
       <div class="container">
         <h2 class="sectionHeadings">Technologies Stack:</h2>
       </div>
@@ -807,7 +807,7 @@
     </section>
 
     <!-- PROJECTS PAGE -->
-    <section id="projectsPage" 0>
+    <section id="projectsPage" class="animatedSection">
       <div class="container">
         <h2 class="sectionHeadings">Projects:</h2>
       </div>
@@ -1111,7 +1111,7 @@
       </div>
     </section>
 
-    <section id="contactPage">
+    <section id="contactPage" class="animatedSection">
       <div class="container">
         <h2 class="sectionHeadings">Contact:</h2>
       </div>
@@ -1320,7 +1320,7 @@
       </div>
       <!-- end contact section-->
     </section>
-    <section id="footer">
+    <section id="footer" class="animatedSection">
       <footer>Copyright © 2023 Jadnell Reyes. All Rights Reserved</footer>
     </section>
 
@@ -1331,6 +1331,7 @@
       crossorigin="anonymous"
     ></script>
     <script src="scripts/navBar.js"></script>
+    <script src="scripts/animationsOnScroll.js"></script>
     <script src="scripts/techStackButtons.js"></script>
     <script src="scripts/imageSlideshow.js"></script>
     <script src="scripts/contactForm.js"></script>
