Separated summary infoCard and fixed a few grammatical errors

--- a/index.html
+++ b/index.html
@@ -144,16 +144,17 @@
                 <h3 class="cardTitles">Summary:</h3>
                 <p>
                   I'm a 22-year-old graduate in Computer Engineering from
-                  Polytechnic University of Puerto Rico, with the goal of
-                  applying my knowledge through real projects. Beyond studies, I
+                  the Polytechnic University of Puerto Rico, with a goal of
+                  applying my knowledge through real life projects. Beyond studies, I
                   find joy in going to the beach, socializing with friends, and
                   playing basketball and videogames.
                 </p>
-
+              </div>
+<div class="infoCard">
                 <p>
-                  Below you can find my Technology Stack expertise, projects,
-                  and contact info. Use the upper left menu for easier
-                  navigation. Enjoy exploring!
+                  Below you can find my Technologies Stack expertise, projects,
+                  and contact information. Use the upper left menu button for easier
+                  navigation and upper right mode button for a darker look. Enjoy exploring!
                 </p>
               </div>
             </div>
