Added placeholder between summary and other infoCard

--- a/index.html
+++ b/index.html
@@ -150,6 +150,7 @@
                   playing basketball and videogames.
                 </p>
               </div>
+<div class="placeholder"></div>
 <div class="infoCard">
                 <p>
                   Below you can find my Technologies Stack expertise, projects,
