Changed TechStack Cards to scrollable cards

--- a/index.html
+++ b/index.html
@@ -143,19 +143,20 @@
               <div class="infoCard">
                 <h3 class="cardTitles">Summary:</h3>
                 <p>
-                  I'm a 22-year-old graduate in Computer Engineering from
-                  the Polytechnic University of Puerto Rico, with a goal of
-                  applying my knowledge through real life projects. Beyond studies, I
+                  I'm a 22-year-old graduate in Computer Engineering from the
+                  Polytechnic University of Puerto Rico, with a goal of applying
+                  my knowledge through real life projects. Beyond studies, I
                   find joy in going to the beach, socializing with friends, and
                   playing basketball and videogames.
                 </p>
               </div>
-<div class="placeholder"></div>
-<div class="infoCard">
+              <div class="placeholder"></div>
+              <div class="infoCard">
                 <p>
                   Below you can find my Technologies Stack expertise, projects,
-                  and contact information. Use the upper left menu button for easier
-                  navigation and upper right mode button for a darker look. Enjoy exploring!
+                  and contact information. Use the upper left menu button for
+                  easier navigation and upper right mode button for a darker
+                  look. Enjoy exploring!
                 </p>
               </div>
             </div>
@@ -234,8 +235,8 @@
         <h2 class="sectionHeadings">Technologies Stack:</h2>
       </div>
 
-      <div class="container">
-        <div id="progLangCard" class="techStackCard">
+      <div class="container" id="projectContainer">
+        <div class="projectCard">
           <div class="container text-center">
             <h3 class="cardTitles">Programming Languages:</h3>
             <div class="row row-cols-3 justify-content-center">
@@ -459,11 +460,8 @@
             </div>
           </div>
         </div>
-      </div>
 
-      <br />
-      <div class="container">
-        <div class="techStackCard">
+        <div class="projectCard">
           <div class="container text-center">
             <h3 class="cardTitles">Software:</h3>
             <div class="row row-cols-3 justify-content-center">
