--- a/index.html
+++ b/index.html
@@ -238,7 +238,9 @@
       <div class="container" id="projectContainer">
         <div class="projectCard">
           <div class="container text-center">
-            <h3 class="cardTitles">Programming Languages:</h3>
+            <div class="container">
+              <h3 class="cardTitles">Programming Languages:</h3>
+            </div>
             <div class="row row-cols-3 justify-content-center">
               <div class="col">
                 <button type="button" id="HTMLButton" class="progLangCube">
@@ -463,7 +465,9 @@
 
         <div class="projectCard">
           <div class="container text-center">
-            <h3 class="cardTitles">Software:</h3>
+            <div class="container">
+              <h3 class="cardTitles">Software:</h3>
+            </div>
             <div class="row row-cols-3 justify-content-center">
               <div class="col">
                 <button type="button" id="VSCODEButton" class="progLangCube">
