Scrollable TechStackCards bug fixes

--- a/index.html
+++ b/index.html
@@ -155,8 +155,8 @@
                 <p>
                   Below you can find my Technologies Stack expertise, projects,
                   and contact information. Use the upper left menu button for
-                  easier navigation and upper right mode button for a darker
-                  look. Enjoy exploring!
+                  easier navigation and upper right theme changing button for a
+                  darker look. Enjoy exploring!
                 </p>
               </div>
             </div>
@@ -182,6 +182,8 @@
                         <li>Critical Thinker</li>
                         <li>Patient</li>
                         <li>Flexible</li>
+                        <li>Attentive</li>
+                        <li>Leadership</li>
                       </ul>
                     </div>
                   </div>
@@ -194,12 +196,12 @@
                         <li>Data Entry</li>
                         <li>Customer Service</li>
                         <li>POS Knowledge</li>
-                        <li>Microsoft Office</li>
-                        <li>Bilingual</li>
-                        <li>Programming</li>
+                        <li>Microsoft Office 365 Suite</li>
+                        <li>Bilingual (English/Spanish)</li>
+                        <li>Programmer</li>
                         <li>Data Analysis</li>
-                        <li>Engineering</li>
-                        <li>Design</li>
+                        <li>Engineer</li>
+                        <li>Designer</li>
                       </ul>
                     </div>
                   </div>
@@ -333,6 +335,7 @@
                 </span>
               </div>
             </div>
+            <div class="space45px"></div>
             <div class="row row-cols-3 justify-content-center">
               <div class="col">
                 <button type="button" id="PythonButton" class="progLangCube">
@@ -351,10 +354,8 @@
                     <b>Python</b>: Python is an interpreted, interactive,
                     object-oriented programming language. It incorporates
                     modules, exceptions, dynamic typing, very high level dynamic
-                    data types, and classes. It supports multiple programming
-                    paradigms beyond object-oriented programming, such as
-                    procedural and functional programming. Python combines
-                    remarkable power with very clear syntax.
+                    data types, and classes. Python combines remarkable power
+                    with very clear syntax.
                     <br />
                     <cite>
                       <a
@@ -425,6 +426,7 @@
                 </span>
               </div>
             </div>
+            <div class="space45px"></div>
             <div class="row row-cols-3 justify-content-center">
               <div class="col">
                 <button type="button" id="SQLButton" class="progLangCube">
@@ -454,6 +456,35 @@
                         href="https://aws.amazon.com/what-is/sql/#:~:text=Structured%20query%20language%20(SQL)%20is%20a%20standard%20language%20for%20database,undergoes%20continual%20upgrades%20and%20improvements."
                       >
                         ~ AWS.Amazon.com
+                      </a></cite
+                    >
+                  </div>
+                </span>
+              </div>
+              <div class="col">
+                <button type="button" id="MATLABButton" class="progLangCube">
+                  <h6 class="softwareName">MATLAB</h6>
+                  <img
+                    class="progLangIcon"
+                    src="Images/Tech Stack/matlab.svg"
+                    title="MATLAB"
+                    width="75px"
+                    height="75px"
+                    alt="MATLAB Logo"
+                  />
+                </button>
+                <span id="MATLABInfo" class="hide info">
+                  <div class="definitions">
+                    <b>MATLAB</b>: MATLAB is a programming and numeric computing
+                    platform used by millions of engineers and scientists to
+                    analyze data, develop algorithms, and create models.
+                    <br />
+                    <cite>
+                      <a
+                        class="defSource"
+                        href="https://www.mathworks.com/products/matlab.html"
+                      >
+                        ~ Mathworks.com
                       </a></cite
                     >
                   </div>
@@ -650,29 +681,34 @@
                 </span>
               </div>
               <div class="col">
-                <button type="button" id="MATLABButton" class="progLangCube">
-                  <h6 class="softwareName">MATLAB</h6>
+                <button type="button" id="ArduinoButton" class="progLangCube">
+                  <h6 class="softwareName">Arduino</h6>
                   <img
                     class="progLangIcon"
-                    src="Images/Tech Stack/matlab.svg"
-                    title="MATLAB"
-                    width="75px"
-                    height="75px"
-                    alt="MATLAB Logo"
+                    src="Images/Tech Stack/arduino.svg"
+                    title="Arduino"
+                    width="65px"
+                    height="65px"
+                    alt="Arduino Logo"
                   />
                 </button>
-                <span id="MATLABInfo" class="hide info">
+                <span id="ArduinoInfo" class="hide info">
                   <div class="definitions">
-                    <b>MATLAB</b>: MATLAB is a programming and numeric computing
-                    platform used by millions of engineers and scientists to
-                    analyze data, develop algorithms, and create models.
+                    <b>Arduino</b>: Arduino is an open-source electronics
+                    platform based on easy-to-use hardware and software. Arduino
+                    boards are able to read inputs - light on a sensor, a finger
+                    on a button, or a Twitter message - and turn it into an
+                    output - activating a motor, turning on an LED, publishing
+                    something online. You can tell your board what to do by
+                    sending a set of instructions to the microcontroller on the
+                    board.
                     <br />
                     <cite>
                       <a
                         class="defSource"
-                        href="https://www.mathworks.com/products/matlab.html"
+                        href="https://www.arduino.cc/en/Guide/Introduction"
                       >
-                        ~ Mathworks.com
+                        ~ Arduino.cc
                       </a></cite
                     >
                   </div>
