Fixed cardTitles position in displays under 991px

--- a/index.html
+++ b/index.html
@@ -1297,7 +1297,11 @@
       <!-- end contact section-->
     </section>
     <section id="footer" class="animatedSection">
-      <footer>Copyright © 2023 Jadnell Reyes. All Rights Reserved</footer>
+      <footer>
+        Copyright © 2023. All Rights Reserved
+        <br />
+        Created by Jadnell H. Reyes P&eacute;rez
+      </footer>
     </section>
 
     <!-- SCRIPTS -->
