--- a/index.html
+++ b/index.html
@@ -481,7 +481,7 @@
               </div>
               <div class="col">
                 <div class="container">
-                  <h3 class="cardTitles">Software:</h3>
+                  <h3 id="softwareTitle" class="cardTitles">Software:</h3>
                 </div>
                 <div type="button" id="VSButton" class="progLangCube">
                   <div class="row">
