Changes to tech stack section.

--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
                   <h3 class="cardTitles">Programming Languages:</h3>
                 </div>
                 <!-- Tech Stack New Container -->
-                <div type="button" id="HTMLButton" class="progLangCube">
+                <div id="HTMLContainer" class="progLangCube">
                   <div class="row">
                     <div class="col">
                       <img
@@ -263,15 +263,40 @@
                       <h6 class="progLangName">HTML</h6>
                     </div>
                     <div class="col">
-                      <img
-                        class="expandArrow"
-                        src="Images/Icons/expandArrow.svg"
-                        title="Expand Arrow"
-                        width="30em"
-                        height="30em"
-                        alt="Expand Arrow"
-                      />
+                      <button
+                        type="button"
+                        id="HTMLButton"
+                        class="expandButton"
+                      >
+                        <img
+                          class="expandArrow"
+                          src="Images/Icons/expandArrow.svg"
+                          title="Expand Arrow"
+                          width="30em"
+                          height="30em"
+                          alt="Expand Arrow"
+                        />
+                      </button>
                     </div>
+                  </div>
+                  <hr id="techDescDivider" />
+                  <div class="row">
+                    <div class="col-4">
+                      <b class="description">Description:</b>
+                    </div>
+                    <div class="col-8">
+                      <b class="techDescription">
+                        HTML is the language in which most websites are written.
+                        HTML is used to create pages and make them functional.
+                        HTML stands for Hyper Text Markup Language.</b
+                      >
+                    </div>
+                    <br />
+                    <cite>
+                      <a class="defSource" href="https://html.com/">
+                        ~ HTML.com
+                      </a></cite
+                    >
                   </div>
                 </div>
 
