Removed skills infoCard from about me section

--- a/index.html
+++ b/index.html
@@ -140,77 +140,7 @@
               /></a>
               <br />
             </div>
-            <div class="container">
-              <div class="infoCard">
-                <h3 class="cardTitles">Summary:</h3>
-                <p>
-                  I'm a 22-year-old graduate in Computer Engineering from the
-                  Polytechnic University of Puerto Rico, with a goal of applying
-                  my knowledge through real life projects. Beyond studies, I
-                  find joy in going to the beach, socializing with friends, and
-                  playing basketball and videogames.
-                </p>
-              </div>
-              <div class="placeholder"></div>
-              <div class="infoCard">
-                <p>
-                  Below you can find my Technologies Stack expertise, projects,
-                  and contact information. Use the upper left menu button for
-                  easier navigation and upper right theme changing button for a
-                  darker look. Enjoy exploring!
-                </p>
-              </div>
-            </div>
-          </div>
 
-          <div class="col">
-            <div class="placeholder"></div>
-            <div class="container">
-              <div class="infoCard">
-                <h3 class="cardTitles">Skills:</h3>
-                <div class="row">
-                  <div class="col">
-                    <h5 class="skillHeading">Soft Skills:</h5>
-                    <div class="skills">
-                      <ul>
-                        <li>Quick Learner</li>
-                        <li>Team Worker</li>
-                        <li>Multitasker</li>
-                        <li>Problem Solver</li>
-                        <li>Communicative</li>
-                        <li>Respectful</li>
-                        <li>Creative</li>
-                        <li>Critical Thinker</li>
-                        <li>Patient</li>
-                        <li>Flexible</li>
-                        <li>Attentive</li>
-                        <li>Leadership</li>
-                      </ul>
-                    </div>
-                  </div>
-
-                  <div class="col">
-                    <h5 class="skillHeading">Technical Skills:</h5>
-                    <div class="skills">
-                      <ul>
-                        <li>Sales</li>
-                        <li>Data Entry</li>
-                        <li>Customer Service</li>
-                        <li>POS Knowledge</li>
-                        <li>Microsoft Office 365 Suite</li>
-                        <li>Bilingual (English/Spanish)</li>
-                        <li>Programmer</li>
-                        <li>Data Analysis</li>
-                        <li>Engineer</li>
-                        <li>Designer</li>
-                      </ul>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-
-            <div class="placeholder"></div>
             <div class="container">
               <div class="infoCard">
                 <h3 class="cardTitles">
@@ -227,6 +157,35 @@
                 </ul>
               </div>
             </div>
+          </div>
+
+          <div class="col">
+            <div class="placeholder"></div>
+            <div class="container">
+              <div class="infoCard">
+                <h3 class="cardTitles">Summary:</h3>
+                <p>
+                  I'm a 22-year-old graduate in Computer Engineering from the
+                  Polytechnic University of Puerto Rico. My goal is to utilize
+                  the tools I acquired in college to real-life projects and
+                  simultaneously gain further experience and knowledge. Beyond
+                  studies, I find joy in going to the beach, socializing with
+                  friends, and playing basketball and videogames.
+                </p>
+              </div>
+              <div class="placeholder"></div>
+              <div class="infoCard">
+                <p>
+                  Below you can find the technologies and software I have
+                  experience on, projects, and contact information. Use the
+                  upper left menu button "&#9859;" for easier navigation and
+                  upper right theme changing button for a different look. Enjoy
+                  exploring!
+                </p>
+              </div>
+            </div>
+
+            <div class="placeholder"></div>
           </div>
         </div>
       </div>
