Made HTML button expandable

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                 <p>
                   I'm a 22-year-old graduate in Computer Engineering from the
                   Polytechnic University of Puerto Rico. My goal is to utilize
-                  the tools I acquired in college to real-life projects and
+                  the tools I acquired in college in real-life projects and
                   simultaneously gain further experience and knowledge. Beyond
                   studies, I find joy in going to the beach, socializing with
                   friends, and playing basketball and videogames.
@@ -178,9 +178,9 @@
                 <p>
                   Below you can find the technologies and software I have
                   experience on, projects, and contact information. Use the
-                  upper left menu button "&#9859;" for easier navigation and
-                  upper right theme changing button for a different look. Enjoy
-                  exploring!
+                  upper left menu button "<b>&#9859;</b>" for easier navigation
+                  and upper right theme changing button for a different look.
+                  Enjoy exploring!
                 </p>
               </div>
             </div>
