Readjusting techStack Containers

--- a/index.html
+++ b/index.html
@@ -659,7 +659,9 @@
               </div>
               <div class="col">
                 <div class="container">
-                  <h3 id="softwareTitle" class="cardTitles">Software:</h3>
+                  <h3 id="softwareTitle" class="cardTitles">
+                    Software/Hardware:
+                  </h3>
                 </div>
                 <div id="VSCODEContainer" class="progLangCube">
                   <div class="row">
