Added theme changer button and reduced sections width

--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
 
   <body>
     <header></header>
-    <!-- One Button Navigation Bar-->
+
+    <!-- Menu Button -->
     <div class="navBar">
       <div class="menu">
         <div id="selectMenu">
@@ -114,6 +115,23 @@
     </div>
 
     <!-- Theme Changer Button -->
+    <div id="themeChanger">
+      <button
+        id="themeChangerButton"
+        class="menuButtons"
+        type="button"
+        onclick=""
+        disabled
+      >
+        <img
+          src="Images/Icons/sun.svg"
+          title="Change Theme"
+          width="50px"
+          height="50px"
+          alt="Theme changing button"
+        />
+      </button>
+    </div>
 
     <!-- ABOUT ME PAGE -->
     <section id="aboutMePage" class="animatedSection leftSlide">
@@ -1940,7 +1958,7 @@
       integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
       crossorigin="anonymous"
     ></script>
-    <script src="scripts/navBar.js"></script>
+    <script src="scripts/menuButton.js"></script>
     <script src="scripts/animationsOnScroll.js"></script>
     <script src="scripts/techStackButtons.js"></script>
     <script src="scripts/imageSlideshow.js"></script>
