--- a/index.html
+++ b/index.html
@@ -44,7 +44,6 @@
 
   <body>
     <header></header>
-
     <!-- Menu Button -->
     <div class="navBar">
       <div class="menu">
@@ -53,8 +52,8 @@
             <img
               src="Images/Icons/gridFour.svg"
               title="Menu"
-              width="50px"
-              height="50px"
+              width="35px"
+              height="35px"
               alt="Menu Button"
             />
           </button>
@@ -67,8 +66,8 @@
             <img
               src="Images/Icons/aboutMe.svg"
               title="About Me"
-              width="50px"
-              height="50px"
+              width="35px"
+              height="35px"
               alt="About Me Button"
             />
           </li>
@@ -80,8 +79,8 @@
             <img
               src="Images/Icons/layers.svg"
               title="Tech Stack"
-              width="50px"
-              height="50px"
+              width="35px"
+              height="35px"
               alt="Tech Stack Button"
             />
           </li>
@@ -92,8 +91,8 @@
             <img
               src="Images/Icons/projects.svg"
               title="Projects"
-              width="50px"
-              height="50px"
+              width="35px"
+              height="35px"
               alt="Projects Button"
             />
           </li>
@@ -104,8 +103,8 @@
             <img
               src="Images/Icons/contactInfo.svg"
               title="Contact Information"
-              width="50px"
-              height="50px"
+              width="35px"
+              height="35px"
               alt="Contact Information Button"
             />
           </li>
@@ -126,84 +125,85 @@
         <img
           src="Images/Icons/sun.svg"
           title="Change Theme"
-          width="50px"
-          height="50px"
+          width="35px"
+          height="35px"
           alt="Theme changing button"
         />
       </button>
     </div>
-
     <!-- ABOUT ME PAGE -->
     <section id="aboutMePage" class="animatedSection leftSlide">
-      <!--Text Greeting-->
-      <div class="container">
-        <h2 class="greeting">Hello World!</h2>
-        <h1 class="greeting">I&apos;m Jadnell H. Reyes Pérez</h1>
-        <h3 class="greeting">and this is my Portfolio.</h3>
-      </div>
-
       <!-- Image and Info Cards Containers -->
       <div class="container text-center">
         <div class="row">
           <div class="col">
-            <div class="container">
-              <a
-                ><img
-                  class="mainPictures"
-                  src="Images/Pictures/TRENZAS ME.jpg"
-                  title="Hello! This is me"
-                  width="275px"
-                  height="275px"
-                  alt="A picture of Jadnell Reyes was supposed to appear here..."
-              /></a>
-              <br />
+            <a
+              ><img
+                class="mainPictures"
+                src="Images/Pictures/TRENZAS ME.jpg"
+                title="Hello! This is me"
+                width="225px"
+                height="225px"
+                alt="A picture of Jadnell Reyes was supposed to appear here..."
+            /></a>
+          </div>
+          <!--Text Greeting-->
+          <div class="col">
+            <div class="container greet">
+              <h3 class="greeting">Hello World!</h3>
+              <h2 class="greeting">I&apos;m Jadnell H. Reyes Pérez</h2>
+              <h4 class="greeting">and this is my Portfolio.</h4>
             </div>
+          </div>
+        </div>
 
-            <div class="container">
-              <div class="infoCard">
-                <h3 class="cardTitles">
-                  Degrees, Awards, Licenses & Certifications:
-                </h3>
-                <ul>
-                  <li>
-                    Bachelor's Degree of Science in Computer Engineering (Cum
-                    Laude)
-                  </li>
-                  <li>Driver's License</li>
-                  <li>High School Diploma</li>
-                  <li>High School Valedictorian Award</li>
-                </ul>
-              </div>
+        <br />
+
+        <div class="row">
+          <div class="col">
+            <div class="infoCard mainCard">
+              <h6 class="cardTitles">Who am I?</h6>
+              <p>
+                I'm a 22-year-old Computer Engineering graduate from the
+                Polytechnic University of Puerto Rico. My goal is to use the
+                knowledge and skills I&apos;ve acquired through real projects,
+                while, simultaneously gaining experience. Beyond work, I find
+                joy in going to the beach, socializing with friends, and playing
+                basketball and videogames.
+              </p>
             </div>
           </div>
 
           <div class="col">
-            <div class="placeholder"></div>
-            <div class="container">
-              <div class="infoCard">
-                <h3 class="cardTitles">Summary:</h3>
-                <p>
-                  I'm a 22-year-old graduate in Computer Engineering from the
-                  Polytechnic University of Puerto Rico. My goal is to utilize
-                  the tools I acquired in college in real-life projects and
-                  simultaneously gain further experience and knowledge. Beyond
-                  studies, I find joy in going to the beach, socializing with
-                  friends, and playing basketball and videogames.
-                </p>
-              </div>
-              <div class="placeholder"></div>
-              <div class="infoCard">
-                <p>
-                  Below you can find the technologies and software I have
-                  experience on, projects, and contact information. Use the
-                  upper left menu button "<b>&#9859;</b>" for easier navigation
-                  and upper right theme changing button for a different look.
-                  Enjoy exploring!
-                </p>
-              </div>
+            <div class="infoCard mainCard">
+              <h6 class="cardTitles">What can you find here?</h6>
+              <p>
+                Below you can find the technologies, software and hardware I
+                have experience on. You can also find projects I&apos;ve worked
+                on, and lastly, my contact information. Use the upper left menu
+                button "<b>&#9859;</b>" for easier navigation and the upper
+                right theme button "&#9728;" to change the look of the
+                Portfolio. Enjoy exploring!
+              </p>
             </div>
+          </div>
 
-            <div class="placeholder"></div>
+          <div class="col">
+            <div class="infoCard mainCard">
+              <h6 class="cardTitles">
+                Achievements, Degrees, Licenses & Certifications:
+              </h6>
+              <ul>
+                <li>
+                  Bachelor's Degree of Science in Computer Engineering,<i>
+                    cum laude
+                  </i>
+                </li>
+                <li>High School Diploma</li>
+                <li>High School Valedictorian Award</li>
+                <li>Driver's License</li>
+              </ul>
+            </div>
           </div>
         </div>
       </div>
