Minor design changes

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
 
   <body>
     <header></header>
+    <div class="background"></div>
     <!-- Menu Button -->
     <div class="navBar">
       <div class="menu">
@@ -182,7 +183,7 @@
                 have experience on. You can also find projects I&apos;ve worked
                 on, and lastly, my contact information. Use the upper left menu
                 button "<b>&#9859;</b>" for easier navigation and the upper
-                right theme button "&#9728;" to change the look of the
+                right theme button "&#127779;" to change the look of the
                 Portfolio. Enjoy exploring!
               </p>
             </div>
